--- a/jstoolchain/style.css
+++ b/jstoolchain/style.css
@@ -10,6 +10,18 @@ h1, h2, h3 {
   font-family: 'Fira Mono', monospace;
   font-variant-ligatures: contextual;
 }
+
+.inverse {
+  background: #272822;
+  color: #777872;
+  text-shadow: 0 0 20px #333;
+}
+
+.inverse h1, .inverse h2 {
+  color: #f3f3f3;
+  line-height: 0.8em;
+}
+
 .logo img {
   width: 25%;
   vertical-align: middle;
