--- a/jstoolchain/style.css
+++ b/jstoolchain/style.css
@@ -12,8 +12,8 @@ table {
 }
 
 td, th {
-  border: solid 0px;
-  padding: 10px;
+  padding: 6px 13px;
+  border: 1px solid #dfe2e5;
 }
 
 .remark-code, .remark-inline-code {
@@ -65,6 +65,11 @@ td, th {
 
 .container {
   display: flex;
+}
+
+.container > pre {
+  width: 50%;
+  margin: 0 1em;
 }
 
 .container > p {
