--- a/jstoolchain/style.css
+++ b/jstoolchain/style.css
@@ -19,6 +19,7 @@ td, th {
 .remark-code, .remark-inline-code {
   font-family: 'Fira Mono', monospace;
   font-variant-ligatures: contextual;
+  background: #F0F0F0;
 }
 
 .inverse {
@@ -80,4 +81,20 @@ td, th {
 .container > p > img {
   width: 100%;
   height: 100%;
+}
+
+.grid {
+  display: grid;
+}
+
+.grid > div {
+  margin: 0 1em;
+}
+
+.g_col1 {
+  grid-column: 1;
+}
+
+.g_col2 {
+  grid-column: 2;
 }
