--- a/jstoolchain/style.css
+++ b/jstoolchain/style.css
@@ -16,7 +16,17 @@ td, th {
   border: 1px solid #dfe2e5;
 }
 
+p {
+  margin: 0.5em 0;
+}
+
+.remark-slide-content {
+  font-size: 24px;
+  padding: 1em 2em;
+}
+
 .remark-code, .remark-inline-code {
+  font-size: 20px;
   font-family: 'Fira Mono', monospace;
   font-variant-ligatures: contextual;
   background: #F0F0F0;
@@ -58,6 +68,7 @@ td, th {
 .good ul, .bad ul, .arrow ul, .star ul {
   list-style: none;
   padding: 0px;
+  margin: 0.5em 0;
 }
 
 .good ul li:before
@@ -82,7 +93,8 @@ td, th {
 
 .star ul li:before
 {
-  content: '⭐';
+  content: '★';
+  color: gold;
   margin: 0 1em;
 }
 
