--- a/jsconfs/style.css
+++ b/jsconfs/style.css
@@ -54,13 +54,13 @@ p {
 }
 
 .logo img {
-  width: 25%;
+  width: 100%;
   vertical-align: middle;
 }
 
 .logo_small img {
   height: 1em;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 .absolute {
